kubernetes/gitlab/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: gitlab.my_domain.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
